versioned_docs/version-2.2.x/3_highlights/4_set.mdx
---
sidebar_position: 4
---

# Set

This page discusses how set works and its quirks.

We will use `setDoc` in the example, but it works the same for `batch.set` and `transaction.set`.

## Stop Unknown Member

Like update, FirelordJS stop unknown member from entering Firestore.

<div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
	<img src="/firelordv2/set1.png" />
	<small>Firestore</small>
</div>
<br />
<div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
	<img src="/firelordv2/set2.png" />
	<small>FirelordJS</small>
</div>
<br />

<div align='center'>

see **[update](./highlights/update#the-firelordjss-way)** for more explanation about this behavior.

</div>

## Merge

A merge set(set with merge : true) can behave like update, all members are partial, except that update can only updates exiting document while set simply create the document if it does not exist.

Merge set also possess the same weakness like update, that is accepting `undefined` value and `undefined` is not a valid firestore data type.

:::note
This is no longer relevant if you enabled `exactOptionalPropertyTypes` in tsconfig.
:::

<div  style={{ display:'flex', justifyContent:'space-around' }}>
    <div style={{ display:'flex', flexDirection:"column", alignItems:'center' }}>
        <img src='/firelordv2/set3.png' />
        <small>Firestore</small>
    </div>
    <div style={{ display:'flex', flexDirection:"column", alignItems:'center' }}>
        <img src='/firelordv2/set4.png' />
        <small>FirelordJS Partial But No Undefined</small>
    </div>
</div>
<br/>
<div align='center'>

And of course FirelordJS stop the `undefined` value.

</div>

NOTE 1:

From **[update](./highlights/update#the-firelordjss-way)**, we know that when dealing with nested form, update behaves like set and replace the whole map.

Now here is the interesting thing, in the case of merge set, it will not replace the whole map, instead it will only set the value you see here, which mean `d` will not be deleted.

:::note

merge set is behaving like proper update than update itself!

Apparently Firestore want us to start questioning our own existence.

:::

## Merge Fields

Merge fields Set behave like merge, except that it updates only the listed member and ignore the rest.

<div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
	<img src="/firelordv2/set5.png" />
	<small>Firestore does not reject unknown field path</small>
</div>
<br />
<div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
	<img src="/firelordv2/set6.png" />
	<small>FirelordJS reject unknown field path</small>
</div>

## Dot Notation Path

You cannot use dot notation for data, both Firestore and FirelordJS will stop you from you doing so.

<div  style={{ display:'flex', justifyContent:'space-around' }}>
    <div style={{ display:'flex', flexDirection:"column", alignItems:'center' }}>
        <img src='/firelordv2/set7.png' />
        <small>Firestore</small>
    </div>
    <div style={{ display:'flex', flexDirection:"column", alignItems:'center' }}>
        <img src='/firelordv2/set8.png' />
        <small>FirelordJS</small>
    </div>
</div>
<br/>
<div align='center'>

Dot Notation will be treated as unknown member.

</div>

Unlike update, set treats `b.c` as field `b.c` not field `c` of `b`.

If the code runs, this is what you will see in the database:

```ts
{
	a: 1,
	'b.c': 1,
}
```

This is NOT what you will get:

```ts
{
	a: 1,
	b: { c: 1 },
}
```

The question is, should FirelordJS alters the behavior of set, so it tallies with the characteristic of update(uniformity)?

FirelordJS tries not to alters the behavior if possible. The reason FirelordJS alters update is out of necessity due to update dangerous implicit data deletion behavior.

But there is no dangerous implicit effect in set operations, so FirestoreJS keep thing as it is now.

Will give this deeper thoughts in future as uniform API improve developer experience.
